# Augur

./: .gitignore  AUGUR_SPRINT_1.md  AUGUR_SPRINT_10.md  AUGUR_SPRINT_11.md  AUGUR_SPRINT_12.md  AUGUR_SPRINT_13.md  AUGUR_SPRINT_14_15.md  AUGUR_SPRINT_16.md  AUGUR_SPRINT_17.md  AUGUR_SPRINT_18.md  AUGUR_SPRINT_19.md  AUGUR_SPRINT_2.md  AUGUR_SPRINT_20.md  AUGUR_SPRINT_2_SESSION.md  AUGUR_SPRINT_3.md  AUGUR_SPRINT_3_SESSION.md  AUGUR_SPRINT_4.md  AUGUR_SPRINT_4_SESSION.md  AUGUR_SPRINT_5.md  AUGUR_SPRINT_5_SESSION.md  AUGUR_SPRINT_6.md  AUGUR_SPRINT_6_SESSION.md  AUGUR_SPRINT_7.md  AUGUR_SPRINT_7_SESSION.md  AUGUR_SPRINT_8.md  AUGUR_SPRINT_8_SESSION.md  AUGUR_SPRINT_9.md  AUGUR_SPRINT_9_SESSION.md  AUGUR_SUPER_SPRINT.md  AUGUR_SUPER_SPRINT_SESSION.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SESSION_STATE.md  VERIFY_SPRINT_1.md  VERIFY_SPRINT_2_SESSION.md  VERIFY_SPRINT_3.md  VERIFY_SPRINT_3_SESSION.md  VERIFY_SPRINT_4.md  (+13 more)
apps/augur-cli/: Cargo.toml
apps/augur-cli/src/: benchmark.rs  install.rs  live.rs  main.rs  package.rs  selftest.rs
apps/augur-desktop/: .gitignore  index.html  package.json
apps/augur-desktop/src/: App.tsx  styles.css
apps/augur-desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
apps/augur-desktop/src-tauri/capabilities/: default.json
apps/augur-desktop/src-tauri/src/: case_state.rs  export.rs  file_load.rs  lib.rs  live_audio.rs  main.rs  models.rs  pipeline.rs  state.rs
apps/augur-desktop/src/components/: AboutDialog.tsx  CodeSwitchBand.tsx  DialectCard.tsx  ErrorBanner.tsx  LangPicker.tsx  MenuBar.tsx  ModelManager.tsx  PackageWizard.tsx  ReviewPanel.tsx  SaveLiveSessionDialog.tsx  SourcePanel.tsx  StatusBar.tsx  TitleBar.tsx  Toolbar.tsx  TranslationPanel.tsx  Waveform.tsx  WorkspaceAudio.tsx  WorkspaceBatch.tsx  WorkspaceDoc.tsx  WorkspaceLive.tsx  languages.ts
apps/augur-desktop/src/ipc/: index.ts
apps/augur-desktop/src/store/: appStore.ts
apps/augur-desktop/src/types/: index.ts
apps/augur-installer/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/augur-installer/src/: App.tsx  styles.css
apps/augur-installer/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/augur-installer/src-tauri/capabilities/: default.json
apps/augur-installer/src-tauri/icons/: icon.icns
apps/augur-installer/src-tauri/src/: bundled.rs  download.rs  installer.rs  lib.rs  main.rs  profiles.rs  python.rs
apps/augur-installer/src/components/: Complete.tsx  InstallProgress.tsx  ProfileSelect.tsx  StepNav.tsx
apps/augur-installer/src/ipc/: index.ts
apps/augur-installer/src/types/: index.ts
apps/verify-cli/: Cargo.toml
apps/verify-cli/src/: benchmark.rs  main.rs  package.rs  selftest.rs
crates/augur-classifier/: Cargo.toml
crates/augur-classifier/examples/: lid_pure_probe.rs
crates/augur-classifier/src/: arabic_dialect.rs  camel.rs  camel_worker.py  classifier.rs  lib.rs
crates/augur-core/: Cargo.toml
crates/augur-core/src/: dialect_routing.rs  error.rs  geoip.rs  lib.rs  pipeline.rs  report.rs  resilience.rs  subtitle.rs  timestamps.rs  yara_scan.rs
crates/augur-core/tests/: quality_gate.rs
crates/augur-ocr/: Cargo.toml
crates/augur-ocr/src/: lib.rs
crates/augur-plugin-sdk/: Cargo.toml
crates/augur-plugin-sdk/src/: lib.rs  strata_impl.rs
crates/augur-stt/: Cargo.toml
crates/augur-stt/src/: diarize.py  diarize.rs  lib.rs  model_select.rs  whisper.rs
crates/augur-stt/tests/: whisper_integration.rs
crates/augur-translate/: Cargo.toml
crates/augur-translate/src/: lib.rs  script.py  script_ct2.py  seamless.rs  seamless_worker.py
crates/verify-classifier/: Cargo.toml
crates/verify-classifier/examples/: lid_label_probe.rs  lid_pure_probe.rs
crates/verify-classifier/src/: arabic_dialect.rs  classifier.rs  lib.rs  script.rs
crates/verify-core/: Cargo.toml
crates/verify-core/src/: error.rs  geoip.rs  lib.rs  pipeline.rs  report.rs  resilience.rs  subtitle.rs  timestamps.rs  yara_scan.rs
crates/verify-ocr/: Cargo.toml
crates/verify-ocr/src/: lib.rs
crates/verify-plugin-sdk/: Cargo.toml
crates/verify-plugin-sdk/src/: lib.rs  strata_impl.rs
crates/verify-stt/: Cargo.toml
crates/verify-stt/src/: diarize.py  diarize.rs  lib.rs  whisper.rs
crates/verify-stt/tests/: whisper_integration.rs
crates/verify-translate/: Cargo.toml
crates/verify-translate/src/: lib.rs  script.py  script_ct2.py
data/yara_rules/: starter.yar
docs/: AIRGAP_INSTALL.md  DEPLOYMENT.md  LANGUAGE_LIMITATIONS.md  QUICK_REFERENCE.md  STRATA_INTEGRATION.md  USER_MANUAL.md
scripts/: build_airgap_package.sh  build_desktop.sh  build_installer.sh  generate_icons.sh  prepare_release.sh
tests/: run_benchmark.py
tests/benchmarks/: README.md  arabic_long.txt  arabic_medium.txt  arabic_short.txt  mixed_languages.txt  pashto_sample.txt
tests/fixtures/: arabic_100_words.txt
