[workspace]
resolver = "2"
members = [
    "crates/verify-core",
    "crates/verify-classifier",
    "crates/verify-stt",
    "crates/verify-translate",
    "crates/verify-ocr",
    "crates/verify-plugin-sdk",
    "apps/verify-cli",
]
# Vendored Strata plugin SDK + minimal strata-fs stub
# (Sprint 8 P1). Excluded from the workspace so they are NOT
# built as part of `cargo build --workspace`; they're pulled in
# only when `verify-plugin-sdk/strata` feature is on.
exclude = [
    "vendor/strata-plugin-sdk",
    "vendor/strata-fs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Proprietary"
authors = ["Wolfmark Systems"]

[workspace.dependencies]
log = "0.4"
thiserror = "1"
