[workspace]
resolver = "2"
members = [
    "crates/augur-core",
    "crates/augur-classifier",
    "crates/augur-stt",
    "crates/augur-translate",
    "crates/augur-ocr",
    "crates/augur-plugin-sdk",
    "apps/augur-cli",
]
# Vendored Strata plugin SDK + minimal strata-fs stub
# (Sprint 8 P1). Excluded from the workspace so they are NOT
# built as part of `cargo build --workspace`; they're pulled in
# only when `augur-plugin-sdk/strata` feature is on.
exclude = [
    "vendor/strata-plugin-sdk",
    "vendor/strata-fs",
    # Sprint 11 — Tauri installer is built standalone:
    #   cd apps/augur-installer/src-tauri && cargo build
    # Excluded so the heavy GUI dep tree is not pulled into the
    # default `cargo build --workspace`.
    "apps/augur-installer/src-tauri",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Proprietary"
authors = ["Wolfmark Systems"]

[workspace.dependencies]
log = "0.4"
thiserror = "1"
