[package]
name = "augur-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "`augur` CLI — standalone binary."

[[bin]]
name = "augur"
path = "src/main.rs"

[dependencies]
augur-core = { path = "../../crates/augur-core" }
augur-classifier = { path = "../../crates/augur-classifier" }
augur-stt = { path = "../../crates/augur-stt" }
augur-translate = { path = "../../crates/augur-translate" }
augur-ocr = { path = "../../crates/augur-ocr" }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = { workspace = true }
env_logger = "0.11"
rayon = "1.12.0"
zip = "8.6.0"
sha2 = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
