[package]
name = "verify-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "`verify` CLI — standalone binary."

[[bin]]
name = "verify"
path = "src/main.rs"

[dependencies]
verify-core = { path = "../../crates/verify-core" }
verify-classifier = { path = "../../crates/verify-classifier" }
verify-stt = { path = "../../crates/verify-stt" }
verify-translate = { path = "../../crates/verify-translate" }
verify-ocr = { path = "../../crates/verify-ocr" }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = { workspace = true }
env_logger = "0.11"
rayon = "1.12.0"
zip = "8.6.0"
sha2 = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
