[package]
name = "augur-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AUGUR pipeline orchestrator and unified error type."

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1", features = ["derive"] }
maxminddb = "0.28.0"
toml = "1.1.2"
serde_json = "1.0.149"
