[package]
name = "augur-translate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NLLB-200 offline translation — Python+transformers subprocess backend."

[dependencies]
augur-core = { path = "../augur-core" }
log = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
