[package]
name = "verify-classifier"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Language identification router (fastText LID / whichlang). Sprint 1 = scaffold."

[dependencies]
verify-core = { path = "../verify-core" }
log = { workspace = true }
thiserror = { workspace = true }
