[package]
name = "verify-classifier"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Language identification router. whichlang = production; fasttext = experimental, see Sprint 4."

[dependencies]
verify-core = { path = "../verify-core" }
log = { workspace = true }
thiserror = { workspace = true }
# whichlang is the production backend (16 major languages, pure
# Rust, no model download). fasttext 0.8 is kept for research
# evaluation only — Sprint 1 confirmed it is NOT binary-compatible
# with Facebook's `lid.176.ftz` and produces systematically wrong
# classifications (Arabic → Esperanto). See CLAUDE.md "Known
# limitations" + the `lid_label_probe` example below.
fasttext = "0.8"
whichlang = "0.1.1"

[[example]]
name = "lid_label_probe"
# Feature-gated so the diagnostic does not run as part of a normal
# `cargo build` / `cargo check`. To reproduce the Sprint 1 finding:
#   cargo run -p verify-classifier --features fasttext-probe \
#     --example lid_label_probe
required-features = ["fasttext-probe"]

[features]
default = []
# Enables the `lid_label_probe` example. The dependency on the
# `fasttext` crate is unconditional today; the feature exists so a
# future `fasttext-pure-rs` evaluation can swap implementations
# without touching downstream callers.
fasttext-probe = []
