[package]
name = "verify-ocr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Tesseract OCR for images (stub in Sprint 1)."

[dependencies]
verify-core = { path = "../verify-core" }
log = { workspace = true }
thiserror = { workspace = true }
pdf-extract = "0.10.0"
