[package]
name = "verify-plugin-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Strata plugin adapter — lets VERIFY load inside Strata (stub in Sprint 1)."

[dependencies]
verify-core = { path = "../verify-core" }
log = { workspace = true }
thiserror = { workspace = true }
