[package]
name = "verify-stt"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Whisper STT — audio → transcript + language + segments. Sprint 1 = scaffold."

[dependencies]
verify-core = { path = "../verify-core" }
log = { workspace = true }
thiserror = { workspace = true }
