[package]
name = "verify-stt"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Whisper STT — audio → transcript + language + segments. Sprint 2 wires candle-whisper (pure Rust)."

[dependencies]
verify-core = { path = "../verify-core" }
log = { workspace = true }
thiserror = { workspace = true }
# WAV decoding fallback when ffmpeg is unavailable (hound is pure
# Rust — no FFI). The ffmpeg subprocess handles every other
# container (MP3, M4A, MP4 audio, OGG, FLAC).
hound = "3.5"
# candle-whisper — Hugging Face's pure-Rust Whisper port. Reads
# safetensors weights from openai/whisper-* on Hugging Face. No
# cmake, no C++ toolchain, no FFI. Metal acceleration on Apple
# Silicon via the `metal` feature. This replaces the Sprint 1
# whisper-rs probe (rejected due to cmake requirement).
candle-core = { version = "0.10.2", features = ["metal"] }
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
# Hugging Face Hub client — used by ModelManager to fetch
# config.json + tokenizer.json + model.safetensors on first run.
# hf-hub manages its own ETag-validated cache; we point it at
# our XDG path so all VERIFY weights land under one directory.
hf-hub = "0.5.0"
tokenizers = "0.22.2"
byteorder = "1.5"
serde_json = "1"
# Used for temperature-fallback sampling in the Whisper decoder
# (Sprint 4 P2). At temperature 0 the decoder is purely greedy
# (argmax) and never touches the RNG; only retry attempts at T>0
# draw samples.
rand = "0.9"
